[package]
name = "aline-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
chrono = "0.4.23"
log = "0.4.17"
md5 = "0.7.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
text-template = "0.1.0"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "aline-api"
path = "src/bin/main.rs"
