[package]
name = "aline-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
chrono = "0.4.23"
dotenvy = "0.15.6"
log = "0.4.17"
md5 = "0.7.0"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-rustls"] }
text-template = "0.1.0"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "aline-api"
path = "src/bin/main.rs"

[profile.release]
strip = true
